added buttons to user pages

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,11 +15,8 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-       <!-- <img src="../static/images/FBcover1200x628.png" width="1000"
-             th:src="@{images/FBcover1200x628.png}"/>-->
-        <h1>Hello</h1>
-
-        <h2>Fellow Spring Framework Gurus!!!</h2>
+        <a href="/all" class="btn btn-primary">List all subjects</a>
+        <a href="/all-users" class="btn btn-primary">List all users</a>
     </div>
 </div>
 </body>
