added the add student button

--- a/src/main/resources/templates/addstudent.html
+++ b/src/main/resources/templates/addstudent.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Homepage</title>
+    <title>Add Student</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="css/bootstrap.min.css"
           th:href="@{css/bootstrap.min.css}"
