--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,9 @@
 
     <title>Homepage</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <script src="css/js/jq.js"
+            th:src="@{css/js/jq.js}"></script>
     <link href="css/bootstrap.min.css"
           th:href="@{css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
