--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,9 @@
     <div class="jumbotron">
         <a href="/all" class="btn btn-primary">List all subjects</a>
         <a href="/all-users" class="btn btn-primary">List all users</a>
+
+        <a href="/new-subject" class="btn btn-info">Add a subject</a>
+        <a href="/new-user" class="btn btn-info">Register</a>
     </div>
 </div>
 </body>
