added list all rec and recommend buttons

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,8 @@
 
         <a href="/new-subject" class="btn btn-info">Add a subject</a>
         <a href="/new-user" class="btn btn-info">Register</a>
+
+        <a href="/all-recommended" class="btn btn-primary">List all recommended subjects</a>
     </div>
 </div>
 </body>
