separated logout page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,9 +25,8 @@
         <a href="/new-user" class="btn btn-info">Register</a>
 
         <a href="/all-recommended" class="btn btn-primary">List all recommended subjects</a>
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>
+        <a href="/login" class="btn btn-success">Login</a>
+        <a href="/logout" class="btn btn-success">Logout</a>
     </div>
 </div>
 </body>
