created the console page

--- a/src/main/resources/templates/addstudent.html
+++ b/src/main/resources/templates/addstudent.html
@@ -23,8 +23,8 @@
             Name <input type="text" id="name" name="name" th:text="${name}" /><br />
             Password <input type="text" id="password" name="password" th:text="${password}" /><br />
             Role <input type="text" id="role" name="role" th:text="${role}"/><br />
-          <!--  <button id="adds">Process</button>-->
-            <a id="adds" href="/" class = "btn btn-info regist">Register</a>
+            <button id="adds">Process</button>
+            <a id="link" href="/" class = "btn btn-info regist">Register</a>
             <!--<input type="submit" />-->
         </div>
     </div>
