--- a/src/main/resources/templates/addsubject.html
+++ b/src/main/resources/templates/addsubject.html
@@ -24,8 +24,8 @@
             Credits <input type="text" id="credits" name="credits" th:text="${credits}" /><br />
             Prof <input type="text" id="prof" name="prof" th:text="${prof}"/><br />
             Annotation <input type="text" id="annotation" name="annotation" th:text="${annotation}"/><br />
-            <!--<button id="adds1">Process</button>-->
-            <a id="adds1" href="/" class = "btn btn-info regist">Add</a>
+            <button id="adds1">Process</button>
+            <a id="link1" href="/" class = "btn btn-info regist">Add</a>
             <!--<input type="submit" />-->
         </div>
     </div>
