--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,10 +19,9 @@
 <div class="container">
     <div class="jumbotron">
         <a href="/all" class="btn btn-primary">List all subjects</a>
-        <a href="/all-users" class="btn btn-primary">List all users</a>
 
-        <a href="/new-subject" class="btn btn-info">Add a subject</a>
         <a href="/new-user" class="btn btn-info">Register</a>
+        <a href="/my-console" class="btn btn-info">My Console</a>
 
         <a href="/all-recommended" class="btn btn-primary">List all recommended subjects</a>
         <a href="/login" class="btn btn-success">Login</a>
