--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,8 +13,8 @@
     You have been logged out.
 </div>
 <form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><label> User Name : <input type="text" name="username" value="guest"/> </label></div>
+    <div><label> Password: <input type="password" name="password" value=""/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
